modules/documents/client/styles/pdf-viewer.scss
/* MIXINS */

@mixin transform($transforms) {
	-webkit-transform: $transforms;
          transform: $transforms;
}

@mixin translate ($x, $y) {
   @include transform(translate($x, $y));
}

.modal.fade {
    .modal-dialog {
        transform: translate(0,0);
    }
}

.document-viewer-modal {
    &.fade {
        .modal-dialog {
            transform: translate(0,0); 
        }
    }

    .modal-dialog,
    .modal-content {
        position: fixed;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        margin: 0;
        width: 100%;
        background: transparent;
        border: none;
        box-shadow: none;
    }

    .btn {
        color: #FFF;
        background: transparent;
        border-color: transparent;

		&:active,
		&:focus {
			border-color: $brand-primary;
		}
    }

    .loading-indicator {
        position: fixed;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
    }
}

.document-viewer-header {
    display: flex;
    flex-direction: row;
    position: absolute;
    top: 0;
    right: 0;
    left: 0;

    h1 {
        margin: 0;
        line-height: 3.2rem;
        font-size: 2rem;
        color: #FFF;
        flex: 1 1 auto
    }

    .actions {
        flex: 0 0 auto;

        .close {
            margin: 0;
            font-size: 2.1rem;
            opacity: 1;
        }
    }
}

.document-viewer-footer {
    position: absolute; 
    right: 0;
    bottom: 0;
    left: 0;
	text-align: center;
    font-weight: normal;
	opacity: 0;
	transition: opacity ease-out 0.5;

    label {
		width: 12rem;
        vertical-align: middle;
        margin-top: 0.6rem;
        margin-bottom: 0;
        font-weight: normal;
    }

	&.show-footer {
		opacity: 1;
	}
}

.document-viewer-header,
.document-viewer-footer {
    z-index: 1001;
    padding: 0.75rem 1.5rem;
    color: #FFF;
    background: rgba(0,0,0,0.5);
}

.document-viewer-body {
    position: absolute;
    width: 100vw;
    height: 100vh;
    padding: 10rem 4rem;
	overflow: auto;
    z-index: 1000;
    text-align: center;
    background: rgba(0,0,0,0.5);

    .document {
        max-width: 100%;

		canvas {
			max-width: 100%;
		}
    }
}

@media (min-width: 760px) {
	.document-viewer-header,
	.document-viewer-footer {
		padding: 1.5rem;
	}
}

/* SPINNER */

$width: 50px;

// demo-specific
.showbox {
	position: absolute;
  	top: 0;
  	bottom: 0;
  	left: 0;
  	right: 0;
  	padding: 5%;
}
// end demo-specific



.loader {
  	position: absolute;
  	top: 50%;
	left: 50%;
  	margin-top: -25px;
  	margin-left: -25px;
  	width: $width;
	opacity: 0;
  	&:before {
    	content: '';
    	display: block;
    	padding-top: 100%;
  	}
	transition: all ease-out 0.2s;
	
	&.show-loader {
		opacity: 1;
	}
}

.circular {
  	animation: rotate 2s linear infinite;
  	height: 100%;
  	transform-origin: center center;
  	width: 100%;
 	position: absolute;
  	top: 0;
  	bottom: 0;
  	left: 0;
  	right: 0;
  	margin: auto;
}

.path {
  	stroke-dasharray: 1, 200;
  	stroke-dashoffset: 0;
  	animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
  	stroke-linecap: round;
}

@keyframes rotate {
  	100% {
    	transform: rotate(360deg);
  	}
}

@keyframes dash {
  	0% {
    	stroke-dasharray: 1, 200;
    	stroke-dashoffset: 0;
  	}
  	50% {
    	stroke-dasharray: 89, 200;
    	stroke-dashoffset: -35px;
  	}
  	100% {
    	stroke-dasharray: 89, 200;
    	stroke-dashoffset: -124px;
  	}
}

@keyframes color {
  	100%,
  	0% {
    	stroke: #fff;
  	}
  	40% {
    	stroke: #fff;
  	}
  	66% {
    	stroke: #fff;
  	}
  	80%,
  	90% {
    	stroke: #fff;
  	}
}

